[package]
name = "cscall"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "基于 UDP 和对称加密的安全的高性能通信框架"
authors = ["share121 <me@s121.top>"]
repository = "https://github.com/share121/cscall"
readme = "README.md"
exclude = ["/.github"]
documentation = "https://docs.rs/cscall"
homepage = "https://github.com/share121/cscall"

[dependencies]
aes-gcm = { version = "0.10.3", optional = true }
argon2 = { version = "0.5.3", optional = true }
bytes = "1.11.0"
dashmap = "6.1.0"
rand = "0.8"
sha2 = { version = "0.10.9", optional = true }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "net", "rt", "time"] }
tracing = "0.1.44"
x25519-dalek = { version = "2.0.1", optional = true }

[features]
default = ["aes256gcm"]
aes256gcm = ["dep:aes-gcm", "dep:argon2", "dep:sha2", "dep:x25519-dalek"]
